# beaver-routes

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE.txt  README.md  mypy.ini  overview.txt  pyproject.toml  pytest.ini  requirements-dev.txt
.devcontainer/: Dockerfile  devcontainer.json
src/beaver_routes/_types/: _types.py  after_hooks.py  hooks.py  method.py  scenario_method.py
src/beaver_routes/core/: attribute_dictionary.py  base_mixin.py  base_route.py  config.py  constants.py  hook.py  hook_manager.py  http_methods.py  httpx_args_handler.py  meta.py  request_handler.py  response.py  route.py  scenario.py  scenario_manager.py  validator_manager.py
src/beaver_routes/exceptions/: __init__.py  exceptions.py
src/beaver_routes/validators/: base.py  headers.py  status_code.py
tests/: conftest.py  custom_route.py  hooks_for_testing.py  mock_routes.py  mock_scenarios.py  test_attribute_dictionary.py  test_base_scenarios.py  test_beaver_routes.py  test_meta.py  test_response.py  test_route.py  test_route_hooks.py  test_route_methods.py  test_validators.py
tests/mock/: mock_requests.py
