[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaver-routes"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "QAToolist", email = "qatoolist@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests",
]

scripts = { "broutes" = "beaver_routes.cli:cli" }

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
]

[project.urls]
Documentation = "https://github.com/qatoolist/beaver-routes#readme"
Issues = "https://github.com/qatoolist/beaver-routes/issues"
Source = "https://github.com/qatoolist/beaver-routes"

[tool.hatch.version]
path = "src/beaver_routes/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "pre-commit",
  "pre-commit-hooks",
  "mypy>=1.0.0",
  "pytest",
  "ruff",
  "black",
  "cachetools",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/beaver_routes tests}"

[tool.coverage.run]
source_pkgs = ["beaver_routes", "tests"]
branch = true
parallel = true
omit = [
  "src/beaver_routes/__about__.py",
]

[tool.coverage.paths]
beaver_routes = ["src/beaver_routes", "*/beaver-routes/src/beaver_routes"]
tests = ["tests", "*/beaver-routes/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "Q"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/beaver_routes"]
